fix: import node modules in ejs

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -7,7 +7,7 @@
         <div id="fileList">
         </div>
         <!-- cropper -->
-        <script src="/node_modules/cropperjs/dist/cropper.js"></script>
+        <script src="cropperjs/dist/cropper.min.js"></script>
         <!-- my js -->
         <script src="/javascripts/file.js"> </script>
     </body>
